# TrojAI-Submissions

./: .build.sh.swo  .gitignore  METADATA.csv  METADATA_DICTIONARY.csv  MLProject  README.md  analyze_weights.py  analyzer_weight.py  analyzer_weight_v1.py  best_attr_cls.p  best_cls.p  best_conf_experience_unique.p  best_experience.p.bak  best_experience_unique.p  best_flip_last_round_experience.p  best_mask.p  best_r14_640_unique_cls.p  best_r14_unique_640_cls.p  build.sh  build_first_2_layers.sh  build_first_5_layers.sh  conda_environment.yml  crossval_folds.py  crossval_folds_first_2_layers.py  crossval_folds_first_5_layers.py  crossval_folds_no_tuning.py  dataloader.py  detector.def  detector.py  detector_bak.py  engine_objdet.py  entrypoint.py  example_trojan_detector.def  experience.p  feature_extraction.py  feature_extractor.py  helper_r10.py  jsonschema_checker.py  metaparameters.json  metaparameters_schema copy.json  (+33 more)
depend/: README.md  pyproject.toml  setup.py
depend/core/: serializable.py
depend/core/dependents/: dependent.py
depend/core/learners/: __init__.py  torch_learner.py
depend/core/loggers/: logger.py
depend/depend/: launch.py  learner.py  run.py
depend/depend/algorithms/: captum.py
depend/depend/algorithms/input_attribution/: attribution_analysis.py
depend/depend/core/: __init__.py  dependent.py  serializable.py
depend/depend/lib/: agent.py  attribution_extractor.py  experience_masker.py  weight_analysis.py
depend/depend/models/: __init__.py  cls.py  vae.py
depend/depend/utils/: configs.py  data_management.py  data_split.py  dataset.py  drebinnn.py  env.py  flatten.py  format.py  models.py  registers.py  trafficnn.py
depend/lib/: __init__.py  attribution_extractor.py  experience_collector.py
depend/tests/: test_attribution.py  test_depend.py
util/: db.py  (+2 more)
(+210 files in other folders)
