[tool.poetry]
name = "depend"
version = "0.1.0"
description = "'trojai project lib'"
authors = ["zwc662 <zwc662@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
torch = "2.0.1"
captum = "^0.6.0"
pydantic = "^2.0.3"
datasets = "^2.14.0"
torchvision = "^0.15.2"
torch-ac = {version = "1.1.0", optional = true}
pyarrow = "^12.0.1"
torcheval = "^0.0.6"
wandb = "^0.15.8"
tensorboard = "^2.14.0"
mlflow = "^2.5.0"
optuna = "^3.3.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"

[tool.poetry.extras]
rl = ["torch-ac"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
