[tool.poetry]
name = "depend"
version = "0.1.0"
description = "'trojai project lib'"
authors = ["zwc662 <zwc662@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = '3.7.13'
captum = "^0.6.0"
pydantic = "^2.0.3"
datasets = "^2.13.2"
pyarrow = "^12.0.1"
torcheval = "^0.0.6"
wandb = "^0.10.15"
tensorboard = "^2.11.2"
mlflow = "^1.30.1"
optuna = "^3.3.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
 

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
